lindsays version of the email

--- a/app/views/application/index.html
+++ b/app/views/application/index.html
@@ -323,7 +323,7 @@
       </p>
     </div>
   </div>
-  <a id='treehouse_link' href="https://www.treehousecommunities.com/open_houses?utm_source=newsletter&utm_medium=email&utm_campaign=open_house" target="_blank">
+  <a id='treehouse_link' href="https://www.treehousecommunities.com/open_houses?utm_source=treehouse&utm_medium=email&utm_campaign=open_house" target="_blank">
     Click here for more information
   </a>
 </div>
